--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,15 +85,16 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="40dp"
             tools:ignore="HardcodedText">
+
             <TextView
+                android:id="@+id/city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dhaka, BD"
-                android:textSize="22sp"
                 android:layout_marginTop="10dp"
-                android:textColor="#009688"
                 android:layout_marginBottom="10dp"
-                />
+                android:text="Dhaka, BD"
+                android:textColor="#009688"
+                android:textSize="22sp" />
         </LinearLayout>
 
         <Button
@@ -130,6 +131,7 @@
             >
 
             <TextView
+                android:id="@+id/temp_c"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="33°C"
